Small CSS fix to allow readability with different themes

--- a/src/event-calendar.css
+++ b/src/event-calendar.css
@@ -13,6 +13,8 @@
   border-bottom: 1px solid rgba(20, 20, 20, 0.7);
   border-left: 1px solid rgba(20, 20, 20, 0.2);
   border-radius: 4px;
+  color: black;
+  background-color: aliceblue;
 }
 
 .event-calendar .group.highlight {
